# similar_shoes

./: .gitignore  README.md  README_SEARCH.md  STREAMLIT_USAGE.md  background_remover.py  build_index.py  config.json  config.yaml  feature_extractor.py  file_organizer.py  main.py  pyproject.toml  requirements.txt  search_engine.py  similarity_analyzer.py  streamlit_app.py  test_install.py  vector_index.py  使用指南.md  快速开始.md
.claude/: settings.local.json
data/: search_history.db
docs/plans/: 2026-02-24-streamlit-web-ui-design.md  2026-02-24-streamlit-web-ui-implementation.md
index/: faiss.index  index_data.pkl
pages/: 1_🔍_图片搜索.py  2_📦_批量搜索.py  3_⚙️_索引管理.py  4_📊_结果对比.py
scripts/: api_server.py  check_similarity.py  main.py
utils/: history_db.py
