[project]
name = "shoes"
version = "0.1.0"
description = "AI-powered shoe image similarity detection and clustering system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "pillow>=10.0.0",
    "rembg>=2.0.50",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
]

[tool.setuptools]
py-modules = ["background_remover", "feature_extractor", "file_organizer", "main", "similarity_analyzer"]
